RESOLVED FIXED176375
[css-grid] grid shorthand should not reset the gutter properties
https://bugs.webkit.org/show_bug.cgi?id=176375
Summary [css-grid] grid shorthand should not reset the gutter properties
Manuel Rego Casasnovas
Reported 2017-09-05 08:37:18 PDT
The spec has been modified and the gutter properties are not reset anymore by the "grid" shorthand. We should update our implementation. CSS WG resultion: https://github.com/w3c/csswg-drafts/issues/1036 Changes on the spec: https://github.com/w3c/csswg-drafts/commit/8f243616df9b967ae546459e955ce0186188b54b
Attachments
Patch (7.35 KB, patch)
2017-09-05 08:43 PDT, Manuel Rego Casasnovas
no flags
Patch (7.35 KB, patch)
2017-09-05 08:50 PDT, Manuel Rego Casasnovas
no flags
Patch (12.14 KB, patch)
2017-09-06 02:13 PDT, Manuel Rego Casasnovas
no flags
Manuel Rego Casasnovas
Comment 1 2017-09-05 08:43:28 PDT
Created attachment 319898 [details] Patch Let's wait until Blink patch lands and the WPT test gets imoprted before landing this.
Javier Fernandez
Comment 2 2017-09-05 08:47:11 PDT
Comment on attachment 319898 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=319898&action=review > Source/WebCore/ChangeLog:3 > + [css-grid] grid shorthand does not reset the gutter properties i guess that the bug is that "it does reset" We could also use "should not reset" but in any case it needs some clarification. > LayoutTests/ChangeLog:3 > + [css-grid] grid shorthand does not reset the gutter properties ditto
Manuel Rego Casasnovas
Comment 3 2017-09-05 08:50:53 PDT
Created attachment 319901 [details] Patch Thanks for the review, applied suggested change.
Manuel Rego Casasnovas
Comment 4 2017-09-06 02:13:22 PDT
WebKit Commit Bot
Comment 5 2017-09-06 02:59:30 PDT
Comment on attachment 319991 [details] Patch Clearing flags on attachment: 319991 Committed r221668: <http://trac.webkit.org/changeset/221668>
WebKit Commit Bot
Comment 6 2017-09-06 02:59:31 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7 2017-09-27 12:35:56 PDT
Note You need to log in before you can comment on or make changes to this bug.