[css-grid] grid shorthand should not reset the gutter properties https://bugs.webkit.org/show_bug.cgi?id=176375

Reviewed by Sergio Villar Senin.

LayoutTests/imported/w3c:

Import new test from WPT.

* web-platform-tests/css/css-grid-1/grid-definition/grid-shorthand-001-expected.txt: Added.
* web-platform-tests/css/css-grid-1/grid-definition/grid-shorthand-001.html: Added.
* web-platform-tests/css/css-grid-1/grid-definition/w3c-import.log:

Source/WebCore:

The CSS WG has resolved that the "grid" shorthand shouldn't reset
the gutter properties anymore:
https://github.com/w3c/csswg-drafts/issues/1036

This was originally implemented in r195529, so this is somehow
a revert of that change.

Test: imported/w3c/web-platform-tests/css/css-grid-1/grid-definition/grid-shorthand-001.html

* css/CSSProperties.json:
* css/parser/CSSPropertyParser.cpp:
(WebCore::CSSPropertyParser::consumeGridShorthand):

LayoutTests:

Update the test to check the new behavior.

* fast/css-grid-layout/grid-shorthand-get-set-expected.txt:
* fast/css-grid-layout/grid-shorthand-get-set.html:


Canonical link: https://commits.webkit.org/193029@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@221668 268f45cc-cd09-0410-ab3c-d52691b4dbfc